# PyloadProxyForSonarr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
src/: config.rs  error.rs  main.rs  state.rs
src/pyload/: client.rs  mod.rs
src/sabnzbd/: mod.rs  models.rs  routes.rs
